[package]
name = "nt-list"
version = "0.2.0"
authors = ["Colin Finck <colin@reactos.org>"]
description = "Compatible, type-safe, and idiomatic Rust implementations of Windows NT Linked Lists"
homepage = "https://github.com/ColinFinck/nt-list"
repository = "https://github.com/ColinFinck/nt-list"
documentation = "https://docs.rs/nt-list"
readme = "../README.md"
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
keywords = ["list_entry", "single_list_entry", "no_std", "nt", "windows"]
categories = ["data-structures", "no-std", "os::windows-apis"]

[dependencies]
moveit = "0.5.0"
nt-list_macros = { path = "../nt-list_macros", version = "0.2.0" }

[features]
default = ["alloc"]
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
