[package]
name = "nt-list_macros"
version = "0.1.0"
authors = ["Colin Finck <colin@reactos.org>"]
description = "Macros for nt-list"
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.40"
quote = "1.0.20"
syn = { version = "1.0.98", features = ["derive", "parsing", "printing", "proc-macro"], default-features = false }
