[package]
name = "nt-list_macros"
version = "0.2.0"
authors = ["Colin Finck <colin@reactos.org>"]
description = "Macros for nt-list"
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["derive", "parsing", "printing", "proc-macro"], default-features = false }
